observatorium/resources/dex/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: <namespace>
  labels:
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/instance: e2e-test
    app.kubernetes.io/name: dex
    app.kubernetes.io/version: v2.24.0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: identity-provider
      app.kubernetes.io/instance: e2e-test
      app.kubernetes.io/name: dex
      app.kubernetes.io/version: v2.24.0
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: identity-provider
        app.kubernetes.io/instance: e2e-test
        app.kubernetes.io/name: dex
        app.kubernetes.io/version: v2.24.0
    spec:
      containers:
        - command:
            - /usr/local/bin/dex
            - serve
            - /etc/dex/cfg/config.yaml
          image: quay.io/dexidp/dex:v2.24.0
          imagePullPolicy: IfNotPresent
          name: dex
          ports:
            - containerPort: 5556
              name: http
              protocol: TCP
          resources: { }
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/dex/cfg
              name: config
            - mountPath: /storage
              name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            defaultMode: 420
            items:
              - key: config.yaml
                path: config.yaml
            secretName: dex
        - name: storage
          persistentVolumeClaim:
            claimName: dex
