observatorium/resources/dex/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/instance: e2e-test
    app.kubernetes.io/name: dex
    app.kubernetes.io/version: v2.24.0
  name: dex
  namespace: <namespace>
spec:
  ports:
    - port: 5556
      protocol: TCP
      targetPort: 5556
  selector:
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/instance: e2e-test
    app.kubernetes.io/name: dex
    app.kubernetes.io/version: v2.24.0
  sessionAffinity: None
  type: ClusterIP
